2008-06-11  Michael Stucki  <michael@typo3.org>

	* (security) Fixed a low-severity Cross Site Scripting issue in fe_adminLib.inc. For details, see http://typo3.org/teams/security/security-bulletins/typo3-20080611-1/ - thanks to Christian Seifert, Jeroen van Iddekinge and Arnd Messer for discovering and reporting this issue.

2008-06-06  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #8362: Duplicate entry for [tstamp] and [crdate] in Web->List module for single table in selector-box (thanks to Steffen Kamper)
	* Fixed bug #8279: Sorting in fields of type "group", "MM=1" and "multiple=1" was not preserved

2008-06-05  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #2905: t3skin - Styling of (non-dyn) tab menus is bad

2008-05-25  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #4455: pid reset to 10000 in Constant Editor

2008-05-16  Dmitry Dulepov  <dmitry@typo3.org>

    * Fixed bug #8192: typoLink generates wrong links

2008-05-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #8346: rtehtmlarea from TYPO3 4.1.6 does not work with Firefox 3 Beta 5
	* Updated htmlArea RTE version to 1.5.6 for TYPO3 4.1.7
	* Fixed bug #8431: Incorrect handling of links by htmlaArea RTE in TYPO3 4.1.6 and Firefox 3

2008-04-22  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8148: IRRE - Expanded or collapsed state of new child records is not handled correctly

2008-04-22  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8040: Bug: Wrong check on creating folders in filelist makes them unaccessible (thanks to Moreno Feltscher)

2008-04-16  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #4186 (correction): cropping didn't work for IM4/5 and GM (thanks to Helmut Hummel)

2008-04-11  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8078: enhance debug stack trace reporting

2008-04-12  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8064: Split does not work with returnKey = 0 (thanks to Dirk Weise)

2008-04-09  Jeff Segars  <jeff@webempoweredchurch.org>
