@@ -3621,6 +3621,16 @@ class t3lib_BEfunc	{
 				$warnings[] = 'The encryption key is not set! Set it in <a href="'.$url.'">$TYPO3_CONF_VARS[SYS][encryptionKey]</a>';
 			}
 
+				// Check if fileDenyPattern was changed which is dangerous on Apache
+			if ($GLOBALS['TYPO3_CONF_VARS']['BE']['fileDenyPattern'] != FILE_DENY_PATTERN_DEFAULT )	{
+				$warnings[] = 'The value of fileDenyPattern is not set to its default value:</br><pre>'.htmlspecialchars(FILE_DENY_PATTERN_DEFAULT).'</pre></br> If TYPO3 is running on Apache, a customized value might enable backend or frontend users to execute malicious php scripts.';
+			}
+
+				// Check if fileDenyPattern allows to upload .htaccess files which is dangerous on Apache
+			if ($GLOBALS['TYPO3_CONF_VARS']['BE']['fileDenyPattern'] != FILE_DENY_PATTERN_DEFAULT && t3lib_div::verifyFilenameAgainstDenyPattern(".htaccess"))	{
+				$warnings[] = 'The current value of fileDenyPattern allows to upload/create files with the name ".htaccess". If TYPO3 is running on Apache, this enables backend or frontend users to create and execute php scripts. Please reset the value of fileDenyPattern to its default.';
+			}
+
 				// Check if there are still updates to perform
 			if (!t3lib_div::compat_version(TYPO3_branch))	{
 				$url = 'install/index.php?redirect_url=index.php'.urlencode('?TYPO3_INSTALL[type]=update');
