@@ -789,7 +789,7 @@ $TCA['tt_content'] = Array (
 				'type' => 'group',
 				'internal_type' => 'file',
 				'allowed' => '',	// Must be empty for disallowed to work.
-				'disallowed' => 'php,php3',
+				'disallowed' => PHP_EXTENSIONS_DEFAULT,
 				'max_size' => $GLOBALS['TYPO3_CONF_VARS']['BE']['maxFileSize'],
 				'uploadfolder' => 'uploads/media',
 				'show_thumbs' => '1',
