@@ -1,3 +1,7 @@
+2008-06-11  Ingmar Schlecht  <ingmar@typo3.org>
+
+	* Fixed #8674: Vulnerability of security bulletin typo3-20080611-1: Default value of fileDenyPattern allows arbitrary code execution on Apache (Patch by Henning Pingel, thanks!)
+
 2008-06-11  Michael Stucki  <michael@typo3.org>
 
 	* (security) Fixed a low-severity Cross Site Scripting issue in fe_adminLib.inc. For details, see http://typo3.org/teams/security/security-bulletins/typo3-20080611-1/ - thanks to Christian Seifert, Jeroen van Iddekinge and Arnd Messer for discovering and reporting this issue.
